<resources>
    <string name="app_name">FirstApp</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Enter your name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="send_email">Send Email</string>
    <string name="email_screen">Email Screen</string>
    <string name="add_your_attachment_here">Add your attachment here</string>

</resources>
